@@ -35,8 +35,9 @@ To start using Solr UIMA Metadata Extraction Library you should go through the f
              never indexed documents entirely in your session. -->
         <bool name="ignoreErrors">true</bool>
         <!-- This is optional. It is used for logging when text processing fails.
-             Usually, set uniqueKey field name -->
+             If logField is not specified, uniqueKey will be used as logField.
         <str name="logField">id</str>
+        -->
         <lst name="analyzeFields">
           <bool name="merge">false</bool>
           <arr name="fields">
